<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>net.frogmouth.rnd</groupId>
        <artifactId>eofff</artifactId>
        <version>0.1.0-SNAPSHOT</version>
    </parent>
    <groupId>net.frogmouth.rnd.eofff</groupId>
    <artifactId>tools</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <exec.mainClass>net.frogmouth.rnd.eofff.tools.validator.Validator</exec.mainClass>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>net.frogmouth.rnd.eofff</groupId>
            <artifactId>isobmff</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>net.frogmouth.rnd.eofff</groupId>
            <artifactId>imagefileformat</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>net.frogmouth.rnd.eofff</groupId>
            <artifactId>nalvideo</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>net.frogmouth.rnd.eofff</groupId>
            <artifactId>uncompressed</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>net.frogmouth.rnd.eofff</groupId>
            <artifactId>yuv</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jmisb</groupId>
            <artifactId>jmisb-api</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.valfirst</groupId>
            <artifactId>slf4j-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jmisb</groupId>
            <artifactId>st0601</artifactId>
            <version>2.0.0-SNAPSHOT</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.jmisb</groupId>
            <artifactId>mimd</artifactId>
            <version>2.0.0-SNAPSHOT</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jmisb</groupId>
            <artifactId>st1603</artifactId>
            <version>2.0.0-SNAPSHOT</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6.1</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>mil.nga</groupId>
            <artifactId>tiff</artifactId>
            <version>3.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.threeten</groupId>
            <artifactId>threeten-extra</artifactId>
            <version>1.7.2</version>
        </dependency>
        <dependency>
            <groupId>org.codice.imaging.nitf</groupId>
            <artifactId>codice-imaging-nitf-core</artifactId>
            <version>0.11-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>net.frogmouth.rnd</groupId>
            <artifactId>sidd</artifactId>
            <version>0.1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>4.7.5</version>
            <type>jar</type>
        </dependency>
<dependency>
    <groupId>commons-io</groupId>
    <artifactId>commons-io</artifactId>
    <version>2.14.0</version>
</dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgument>--add-modules=jdk.incubator.foreign</compilerArgument>
                    <compilerArgument>-Xlint:unchecked</compilerArgument>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <!-- jacoco plugin for test coverage report -->
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <phase>prepare-package</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>--add-modules=jdk.incubator.foreign</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.evolvedbinary.maven.jvnet</groupId>
                <artifactId>jaxb30-maven-plugin</artifactId>
                <version>0.15.0</version>
                <configuration>
                    <schemaDirectory>src/main/xsd</schemaDirectory>
                    <schemaIncludes>
                        <include>fakesecurity.xsd</include>
                    </schemaIncludes>
                    <bindingDirectory>src/main/xjb</bindingDirectory>
                    <bindingIncludes>
                        <include>fakesecurity.xjb</include>
                    </bindingIncludes>
                    <strict>false</strict>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${exec.mainClass}</mainClass>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                    <resource>META-INF/services/net.frogmouth.rnd.eofff.isobmff.BoxParser</resource>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                    <resource>META-INF/services/net.frogmouth.rnd.eofff.imagefileformat.extensions.properties.PropertyParser</resource>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
